# chessbox

./: .gitignore  CHESSBOX-DESIGN.md  CMakeLists.txt  README.md  TODO.md  tests.bat
common/: BoardRules.h  PGNUtils.cpp  PGNUtils.h  README.md  StockfishUCIClient.cpp  StockfishUCIClient.h  UCIClient.cpp  UCIClient.h  chessmove.hpp  json.hpp  socketinstance.cpp  socketinstance.h  thc.h  ucitest.hpp
controller/: CMakeLists.txt  README.md  build.bat
controller-gui/: CMakeLists.txt  README.md  TODO.md  build.bat  cbgui-sample.json  main.cpp  version-sim-build.json  version-sim.json
controller-gui/src/: AnimSprite.cpp  AnimSprite.h  Board.cpp  Board.h  Button.cpp  Button.h  Component.cpp  Component.h  Connector.cpp  Connector.h  ControllerGUI.cpp  ControllerGUI.h  ControllerGUIProto.cpp  ControllerGUIProto.h  ControllerGUIjson.cpp  Dialog.cpp  Dialog.h  FontManager.cpp  FontManager.h  Label.cpp  Label.h  MovesPanel.cpp  MovesPanel.h  Prefs.cpp  Prefs.h  Sprite.cpp  Sprite.h  TextArea.cpp  TextArea.h  TextField.cpp  TextField.h  UIGroup.cpp  UIGroup.h  Window.cpp  Window.h  coolspot.cpp  defs.h  generalexception.cpp  generalexception.h  guitest.cpp  (+10 more)
controller/src/main/cpp/: actiontest.cpp  boardtest.cpp  chessaction.hpp  chessmove.hpp  controller.cpp  controllersim.cpp  mcptest.c  process.cpp  rowtest.c  test.cpp  thc.h
