cmake_minimum_required(VERSION 3.0.2)
project(cbcontroller)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-std=c++11")

include_directories(../common)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
include_directories(../tiny-process-library)
link_directories(../tiny-process-library/build)

add_executable(cbcontroller src/main/cpp/controller.cpp ../common/thc.cpp)
#add_executable(boardtest src/main/cpp/boardtest.cpp)
#add_executable(rowtest src/main/cpp/rowtest.c)
#add_executable(test src/main/cpp/test.cpp ../common/thc.cpp)
target_link_libraries(cbcontroller PRIVATE ssobjects wiringPi pthread tiny-process-library)
#target_link_libraries(boardtest PRIVATE wiringPi )
#target_link_libraries(rowtest PRIVATE wiringPi )
